# python-xll

./: .gitignore  build_python_xll.py  build_xlcall.py  build_xlthunk.py  environment.yml  pyproject.toml  pytest.ini  setup.py  test-debugpy.py
src/: DllMain.CPP  XLCALL.h  XLCALLAPI.h  XLCALLDEF.c
test/: conftest.py  test_Application.py  test_auto.py  test_excel_application.py  test_py_eval.py  test_xll.py
xll/: __init__.py  api.py  auto.py  convert.py  export.py  output.py  register.py  typecode.py  xloper12.py
xll/test/: test_api.py  test_register.py  test_xloper12.py
